--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,7 +10,7 @@ on:
     branches: ["main"]
 
 jobs:
-  build:
+  macos:
     runs-on: macos-15
 
     steps:
@@ -19,6 +19,22 @@ jobs:
           xcode-version: "16.1.0"
 
       - uses: actions/checkout@v3
+
+      - name: Build
+        run: swift build
+
+      - name: Run tests
+        run: swift test
+
+  windows:
+    runs-on: windows-latest
+
+    steps:
+      - uses: actions/checkout@v3
+
+      - uses: swift-actions/setup-swift@v2
+      - name: Get swift version
+        run: swift --version
 
       - name: Build
         run: swift build
